# exbar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/exbar-cli/: Cargo.toml  build.rs
crates/exbar-cli/src/: actions.rs  clipboard.rs  config.rs  contextmenu.rs  dialog_nav.rs  dragdrop.rs  drop_effect.rs  error.rs  explorer.rs  hit_test.rs  layout.rs  lib.rs  lifecycle.rs  log.rs  main.rs  navigate.rs  paint.rs  paths.rs  picker.rs  pointer.rs  position.rs  rename.rs  rename_edit.rs  shell_windows.rs  target.rs  test_helpers.rs  theme.rs  toolbar.rs  visibility.rs  wndproc.rs
crates/exbar-cli/tests/: config_tests.rs
crates/exbar-cli/wix/: License.rtf  license.rtf  main.wxs
crates/exbar-dll/: Cargo.toml  build.rs
crates/exbar-dll/src/: config.rs  contextmenu.rs  dragdrop.rs  hook.rs  lib.rs  log.rs  navigate.rs  picker.rs  toolbar.rs
crates/exbar-dll/tests/: config_tests.rs  theme_tests.rs
crates/tabplorer-cli/: Cargo.toml
crates/tabplorer-cli/src/: main.rs
crates/tabplorer-dll/: Cargo.toml
crates/tabplorer-dll/src/: bho.rs  config.rs  dragdrop.rs  explorer.rs  hook.rs  lib.rs  navigate.rs  theme.rs  toolbar.rs
docs/: ci-plan.md  release-smoke-test.md
scripts/: build-msi.sh  doc-check.sh
