[package]
name = "exbar-cli"
version = "0.1.0"
edition = "2024"
authors = ["Jamison Wilde"]
description = "Explorer Bar (Exbar) CLI installer helper"
license = "MIT"

[[bin]]
name = "exbar"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dependencies.windows-core]
version = "0.61"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
