[package]
name = "exbar-dll"
version = "0.2.0"
edition = "2024"

[lib]
name = "exbar_dll"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
