[package]
name = "tabplorer-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tabplorer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
