[package]
name = "tabplorer-dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_WindowsAndMessaging",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows-core]
version = "0.61"

[dev-dependencies]
tempfile = "3"
